@@ -2,6 +2,7 @@ Retrotranslator Changelog
 =================================
 
   - Bug fixed: Translation did not work for ReentrantReadWriteLock.readLock() and ReentrantReadWriteLock.writeLock().
+  - Supported: PrintWriter(File), PrintWriter(File, String), PrintWriter(String), PrintWriter(String, String).   
 
 1.0.7 (2006-07-04)
 ---------------------------------
